[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/module/interface.gd" type="Script" id=1]
[ext_resource path="res://addons/module/createFolderIcon_white.svg" type="Texture" id=2]
[ext_resource path="res://addons/module/editInterfaceDialog.gd" type="Script" id=3]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="interface" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hbox" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 22.0
alignment = 2

[node name="createFolderBtn" type="Button" parent="hbox"]
margin_left = 964.0
margin_right = 992.0
margin_bottom = 22.0
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="updateBtn" type="Button" parent="hbox"]
margin_left = 996.0
margin_right = 1024.0
margin_bottom = 22.0
icon = SubResource( 2 )
flat = true
__meta__ = {
"_editor_description_": ""
}

[node name="tableTree" type="Tree" parent="."]
margin_top = 26.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
allow_reselect = true
hide_root = true

[node name="confirmDialog" type="ConfirmationDialog" parent="tableTree"]
margin_right = 200.0
margin_bottom = 70.0

[node name="interfaceDialog" type="WindowDialog" parent="tableTree"]
margin_right = 600.0
margin_bottom = 160.0
rect_min_size = Vector2( 600, 200 )
popup_exclusive = true
window_title = "Edit Interface"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="tableTree/interfaceDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="descLabel" type="Label" parent="tableTree/interfaceDialog/vbox"]
margin_right = 584.0
margin_bottom = 14.0
text = "Description"

[node name="descEdit" type="TextEdit" parent="tableTree/interfaceDialog/vbox"]
margin_top = 22.0
margin_right = 584.0
margin_bottom = 98.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[node name="paramsLabel" type="Label" parent="tableTree/interfaceDialog/vbox"]
margin_top = 106.0
margin_right = 584.0
margin_bottom = 120.0
text = "Params"

[node name="paramsEdit" type="LineEdit" parent="tableTree/interfaceDialog/vbox"]
margin_top = 128.0
margin_right = 584.0
margin_bottom = 152.0

[node name="btnsHbox" type="HBoxContainer" parent="tableTree/interfaceDialog/vbox"]
margin_top = 160.0
margin_right = 584.0
margin_bottom = 192.0
rect_min_size = Vector2( 0, 32 )
custom_constants/separation = 32
alignment = 1

[node name="okBtn" type="Button" parent="tableTree/interfaceDialog/vbox/btnsHbox"]
margin_left = 231.0
margin_top = 6.0
margin_right = 267.0
margin_bottom = 26.0
size_flags_vertical = 4
text = "Edit"

[node name="cancelBtn" type="Button" parent="tableTree/interfaceDialog/vbox/btnsHbox"]
margin_left = 299.0
margin_top = 6.0
margin_right = 353.0
margin_bottom = 26.0
size_flags_vertical = 4
text = "Cancel"
[connection signal="pressed" from="hbox/createFolderBtn" to="." method="_on_createFolderBtn_pressed"]
[connection signal="pressed" from="hbox/updateBtn" to="." method="_on_updateBtn_pressed"]
[connection signal="button_pressed" from="tableTree" to="." method="_on_tableTree_button_pressed"]
[connection signal="item_activated" from="tableTree" to="." method="_on_tableTree_item_activated"]
[connection signal="item_edited" from="tableTree" to="." method="_on_tableTree_item_edited"]
[connection signal="confirmed" from="tableTree/confirmDialog" to="." method="_on_confirmDialog_confirmed"]
[connection signal="ok" from="tableTree/interfaceDialog" to="." method="_on_interfaceDialog_ok"]
[connection signal="pressed" from="tableTree/interfaceDialog/vbox/btnsHbox/okBtn" to="tableTree/interfaceDialog" method="_on_okBtn_pressed"]
[connection signal="pressed" from="tableTree/interfaceDialog/vbox/btnsHbox/cancelBtn" to="tableTree/interfaceDialog" method="_on_cancelBtn_pressed"]
